--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -19,7 +19,7 @@
 
 // header
 .header {
-    padding: 4.1rem 0;
+    padding: 5.1rem 0;
     .logo {
         width: 8.9rem;
     }
@@ -47,8 +47,72 @@
             padding: 1.5rem 2.5rem;
         }
     }
+    .wrapper {
+        @extend %wrapper;
+        align-items: center;
+    }
 }
 .wrapper {
     @extend %wrapper;
-    align-items: center;
+}
+
+// hero
+.hero {
+    position: relative;
+    &__title {
+        width: 66.1rem;
+    }
+    &__btn {
+        position: relative;
+        z-index: 1;
+        width: 16.3rem;
+        border-radius: 1rem;
+        backdrop-filter: blur(6px);
+        background: linear-gradient(180deg, #ff3eec 0%, rgba(127, 52, 173, 0) 142.73%);
+        a p {
+            height: 4.6rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+        // &::after {
+        //     content: "";
+        //     z-index: -1;
+        //     width: 13.5rem;
+        //     height: 3rem;
+        //     top: 2.3rem;
+        //     right: 1.5rem;
+        //     position: absolute;
+        //     background: #ea5bdb;
+        //     backdrop-filter: blur(2.5px);
+        //     border-radius: 1rem;
+        // }
+    }
+    .wrapper-btn {
+        display: block;
+        position: absolute;
+        top: 23rem;
+        right: 27rem;
+        .background {
+            z-index: -1;
+            width: 13.5rem;
+            height: 3rem;
+            top: 2.2rem;
+            left: 1.4rem;
+            position: absolute;
+            background: #ea5bdb;
+            backdrop-filter: blur(2.5px);
+            border-radius: 1rem;
+        }
+    }
+}
+.main {
+    .wrapper {
+        margin-top: 2rem;
+    }
+    .subtitle {
+        width: 33.8rem;
+        margin-top: 3rem;
+    }
 }
