--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-.content-wrapper, .header .content-wrapper, .header .nav {
+.cards__title, .content-wrapper, .header .content-wrapper, .header .nav {
   display: flex;
   justify-content: space-between;
 }
@@ -66,7 +66,7 @@ ul li {
   outline-offset: 0;
 }
 
-.content-wrapper, .header .content-wrapper, .header .nav {
+.cards__title, .content-wrapper, .header .content-wrapper, .header .nav {
   display: flex;
   justify-content: space-between;
 }
@@ -138,7 +138,7 @@ ul li {
   z-index: 1;
   width: 16.3rem;
   border-radius: 1rem;
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(0.6rem);
   background: linear-gradient(180deg, #ff3eec 0%, rgba(127, 52, 173, 0) 142.73%);
 }
 .hero__btn a p {
@@ -163,8 +163,60 @@ ul li {
   right: 1.5rem;
   position: absolute;
   background: #ea5bdb;
-  backdrop-filter: blur(2.5px);
+  backdrop-filter: blur(0.25rem);
   border-radius: 1rem;
+}
+
+.wrapper-card {
+  margin-top: 6rem;
+}
+
+.cards {
+  position: relative;
+}
+.cards::after {
+  content: "";
+  z-index: -1;
+  width: 13.5rem;
+  height: 10rem;
+  top: 30.6rem;
+  right: 10rem;
+  position: absolute;
+  background: #ea5bdb;
+  backdrop-filter: blur(0.25rem);
+  opacity: 0.75;
+  border-radius: 1rem;
+}
+.cards__item {
+  padding: 2.2rem 2.7rem 1.7rem;
+  width: 35rem;
+  color: #f2f2f2;
+  backdrop-filter: blur(4rem);
+  border-radius: 1rem;
+  background: radial-gradient(60.81% 29.27% at 50.14% 10.49%, rgba(234, 91, 219, 0.8) 0%, rgba(104, 64, 100, 0) 100%, rgba(255, 255, 255, 0) 100%), radial-gradient(99.32% 47.8% at 49.86% 94.63%, #ea5bdb 0%, rgba(104, 64, 100, 0) 100%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #1b1b1b 0%, #000000 100%);
+}
+.cards__subtitle {
+  margin-top: 1.3rem;
+}
+.cards__subtitle p {
+  font-size: 1.6rem;
+}
+.cards__subtitle-numder_user {
+  padding-right: 3rem;
+  background: url(../img/verification.svg) no-repeat right center;
+  background-size: contain;
+}
+.cards .wrapper {
+  padding: 1.5rem 0.5rem 0;
+  margin-top: 0;
+}
+
+.cards.bottom {
+  margin-top: 20rem;
+}
+
+.cards.top {
+  margin-top: -20rem;
 }
 
 /*# sourceMappingURL=main.css.map */
