--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -77,7 +77,7 @@
         z-index: 1;
         width: 16.3rem;
         border-radius: 1rem;
-        backdrop-filter: blur(6px);
+        backdrop-filter: blur(0.6rem);
         background: linear-gradient(180deg, #ff3eec 0%, rgba(127, 52, 173, 0) 142.73%);
         a p {
             height: 4.6rem;
@@ -101,8 +101,73 @@
             right: 1.5rem;
             position: absolute;
             background: #ea5bdb;
-            backdrop-filter: blur(2.5px);
+            backdrop-filter: blur(0.25rem);
             border-radius: 1rem;
         }
     }
+}
+
+.wrapper-card {
+    margin-top: 6rem;
+}
+
+.cards {
+    position: relative;
+    &::after {
+        content: "";
+        z-index: -1;
+        width: 13.5rem;
+        height: 10rem;
+        top: 30.6rem;
+        right: 10rem;
+        position: absolute;
+        background: #ea5bdb;
+        backdrop-filter: blur(0.25rem);
+        opacity: 0.75;
+        border-radius: 1rem;
+    }
+    &__item {
+        padding: 2.2rem 2.7rem 1.7rem;
+        width: 35rem;
+        color: #f2f2f2;
+        backdrop-filter: blur(4rem);
+        border-radius: 1rem;
+        background: radial-gradient(
+                60.81% 29.27% at 50.14% 10.49%,
+                rgba(234, 91, 219, 0.8) 0%,
+                rgba(104, 64, 100, 0) 100%,
+                rgba(255, 255, 255, 0) 100%
+            ),
+            radial-gradient(
+                99.32% 47.8% at 49.86% 94.63%,
+                #ea5bdb 0%,
+                rgba(104, 64, 100, 0) 100%,
+                rgba(255, 255, 255, 0) 100%
+            ),
+            linear-gradient(180deg, #1b1b1b 0%, #000000 100%);
+    }
+    &__title {
+        @extend %wrapper;
+    }
+    &__subtitle {
+        margin-top: 1.3rem;
+        p {
+            font-size: calc($font-p - 0.4rem);
+        }
+    }
+    &__subtitle-numder_user {
+        padding-right: 3rem;
+        background: url(../img/verification.svg) no-repeat right center;
+        background-size: contain;
+    }
+    .wrapper {
+        padding: 1.5rem 0.5rem 0;
+        margin-top: 0;
+    }
+}
+.cards.bottom {
+    margin-top: 20rem;
+}
+.cards.top {
+    margin-top: -20rem;
 }
