--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -238,3 +238,40 @@
         padding-left: 13rem;
     }
 }
+
+// NFT-carousel
+
+.tranding {
+    margin-top: 8rem;
+    &__subtitle {
+        width: 52.6rem;
+        margin-top: 1.5rem;
+    }
+}
+.owl-carousel {
+    margin-top: 6rem;
+}
+.owl-item {
+    margin-top: 4rem;
+    background: linear-gradient(90.38deg, #141118 0.54%, rgba(0, 0, 0, 0) 50.35%),
+        linear-gradient(270deg, #141118 -4.58%, rgba(0, 0, 0, 0) 49.86%),
+        radial-gradient(126.68% 60.98% at 46.7% 83.17%, #ea5bdb 0%, rgba(69, 47, 67, 0) 100%);
+    &__img {
+        width: auto;
+        min-height: 47rem;
+        display: flex;
+        img {
+            transition: 2s ease-in-out;
+            &:hover {
+                margin-top: -10rem;
+                transform: scale(1.1);
+            }
+        }
+    }
+}
+
+.NFT-carousel {
+    .container:last-child {
+        width: auto;
+    }
+}
