--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -261,7 +261,7 @@
         min-height: 47rem;
         display: flex;
         img {
-            transition: 2s ease-in-out;
+            transition: 1s ease-in-out;
             &:hover {
                 margin-top: -10rem;
                 transform: scale(1.1);
@@ -274,4 +274,16 @@
     .container:last-child {
         width: auto;
     }
+}
+
+.visible {
+    width: 13.5rem;
+    height: 1rem;
+    opacity: 0.75;
+    backdrop-filter: blur(0.25rem);
+    background-color: $primary-color;
+    border-radius: 0 0 1rem 1rem;
+    position: absolute;
+    right: 45%;
+    margin-top: -1.2rem;
 }
