--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-.cards__title, .content-wrapper, .header .content-wrapper, .header .nav {
+.resently-top .wrapper-name__title, .resently-top .wrapper-name__subtitle, .cards__title, .content-wrapper, .header .content-wrapper, .header .nav {
   display: flex;
   justify-content: space-between;
 }
@@ -66,7 +66,7 @@ ul li {
   outline-offset: 0;
 }
 
-.cards__title, .content-wrapper, .header .content-wrapper, .header .nav {
+.resently-top .wrapper-name__title, .resently-top .wrapper-name__subtitle, .cards__title, .content-wrapper, .header .content-wrapper, .header .nav {
   display: flex;
   justify-content: space-between;
 }
@@ -148,13 +148,14 @@ ul li {
   align-items: center;
   text-align: center;
 }
-.hero .wrapper-btn {
+
+.wrapper-btn {
   display: block;
   position: absolute;
   top: 23rem;
   right: 27rem;
 }
-.hero .wrapper-btn::after {
+.wrapper-btn::after {
   content: "";
   z-index: -1;
   width: 13.5rem;
@@ -306,8 +307,15 @@ ul li {
   transform: scale(1.1);
 }
 
+.NFT-carousel {
+  position: relative;
+}
 .NFT-carousel .container:last-child {
   width: auto;
+}
+.NFT-carousel .wrapper-btn {
+  top: 81rem;
+  right: 63.3rem;
 }
 
 .visible {
@@ -320,6 +328,66 @@ ul li {
   position: absolute;
   right: 45%;
   margin-top: -1.2rem;
+}
+
+.recently {
+  text-align: center;
+  margin-top: 18.7rem;
+}
+.recently__subtitle {
+  width: 53.5rem;
+  margin: 4rem auto 0;
+}
+
+.resently-top.content-wrapper {
+  align-items: center;
+}
+
+.resently-top {
+  margin-top: 17rem;
+}
+.resently-top__item {
+  width: 33.8rem;
+  max-height: 25.4rem;
+  border-radius: 1rem;
+  backdrop-filter: blur(1.5rem);
+  background: radial-gradient(100% 367.85% at 0% 50%, rgba(234, 91, 219, 0.5) 0%, rgba(20, 17, 24, 0) 100%);
+}
+.resently-top__item.center {
+  min-height: 35.4rem;
+}
+.resently-top__item-number {
+  width: 13.8rem;
+  background-size: contain;
+  padding-top: 13.9rem;
+  margin: -12.9rem auto 0;
+}
+.resently-top__item-number h3 {
+  font-size: 2.5rem;
+  text-align: center;
+  margin-top: 9rem;
+}
+.resently-top .third {
+  background: url(../img/resently-top/img1.svg) no-repeat center;
+}
+.resently-top .second {
+  background: url(../img/resently-top/img3.svg) no-repeat center;
+}
+.resently-top .first {
+  background: url(../img/resently-top/img2.svg) no-repeat center;
+  padding-top: 23.5rem;
+  margin-top: -17rem;
+}
+.resently-top .wrapper-name {
+  padding: 1rem 2rem;
+  margin: 2.3rem 3.1rem;
+  border-radius: 1rem;
+  backdrop-filter: blur(2.25rem);
+  opacity: 0.5;
+  background: radial-gradient(142.75% 525.12% at 50% 0%, rgba(234, 91, 219, 0.5) 0%, rgba(20, 17, 24, 0) 100%);
+}
+.resently-top .wrapper-name__subtitle > div p {
+  font-size: 1.6rem;
 }
 
 /*# sourceMappingURL=main.css.map */
