--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -87,23 +87,23 @@
             text-align: center;
         }
     }
-    .wrapper-btn {
-        display: block;
+}
+.wrapper-btn {
+    display: block;
+    position: absolute;
+    top: 23rem;
+    right: 27rem;
+    &::after {
+        content: "";
+        z-index: -1;
+        width: 13.5rem;
+        height: 3rem;
+        top: 2.3rem;
+        right: 1.5rem;
         position: absolute;
-        top: 23rem;
-        right: 27rem;
-        &::after {
-            content: "";
-            z-index: -1;
-            width: 13.5rem;
-            height: 3rem;
-            top: 2.3rem;
-            right: 1.5rem;
-            position: absolute;
-            background: $primary-color;
-            backdrop-filter: blur(0.25rem);
-            border-radius: 1rem;
-        }
+        background: $primary-color;
+        backdrop-filter: blur(0.25rem);
+        border-radius: 1rem;
     }
 }
 
@@ -271,8 +271,13 @@
 }
 
 .NFT-carousel {
+    position: relative;
     .container:last-child {
         width: auto;
+    }
+    .wrapper-btn {
+        top: 81rem;
+        right: 63.3rem;
     }
 }
 
@@ -286,4 +291,70 @@
     position: absolute;
     right: 45%;
     margin-top: -1.2rem;
+}
+
+// selectors
+
+.recently {
+    text-align: center;
+    margin-top: 18.7rem;
+    &__subtitle {
+        width: 53.5rem;
+        margin: 4rem auto 0;
+    }
+}
+.resently-top.content-wrapper {
+    align-items: center;
+}
+.resently-top {
+    margin-top: 17rem;
+    &__item {
+        width: 33.8rem;
+        max-height: 25.4rem;
+        border-radius: 1rem;
+        backdrop-filter: blur(1.5rem);
+        background: radial-gradient(100% 367.85% at 0% 50%, rgba(234, 91, 219, 0.5) 0%, rgba(20, 17, 24, 0) 100%);
+    }
+    &__item.center {
+        min-height: 35.4rem;
+    }
+
+    &__item-number {
+        width: 13.8rem;
+        background-size: contain;
+        padding-top: 13.9rem;
+        margin: -12.9rem auto 0;
+        h3 {
+            font-size: calc($font-h - 5.1rem);
+            text-align: center;
+            margin-top: 9rem;
+        }
+    }
+    .third {
+        background: url(../img/resently-top/img1.svg) no-repeat center;
+    }
+    .second {
+        background: url(../img/resently-top/img3.svg) no-repeat center;
+    }
+    .first {
+        background: url(../img/resently-top/img2.svg) no-repeat center;
+        padding-top: 23.5rem;
+        margin-top: -17rem;
+    }
+
+    .wrapper-name {
+        padding: 1rem 2rem;
+        margin: 2.3rem 3.1rem;
+        border-radius: 1rem;
+        backdrop-filter: blur(2.25rem);
+        opacity: 0.5;
+        background: radial-gradient(142.75% 525.12% at 50% 0%, rgba(234, 91, 219, 0.5) 0%, rgba(20, 17, 24, 0) 100%);
+        &__title,
+        &__subtitle {
+            @extend %wrapper;
+        }
+        &__subtitle > div p {
+            font-size: calc($font-p - 0.4rem);
+        }
+    }
 }
