--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -308,6 +308,20 @@
 }
 .resently-top {
     margin-top: 17rem;
+    position: relative;
+    &::after {
+        content: "";
+        z-index: -1;
+        width: 13.5rem;
+        height: 11.3rem;
+        bottom: -0.7rem;
+        right: 44%;
+        position: absolute;
+        background: $primary-color;
+        backdrop-filter: blur(0.25rem);
+        border-radius: 1rem;
+        opacity: 0.75;
+    }
     &__item {
         width: 33.8rem;
         max-height: 25.4rem;
