--- a/assets/css/scss/_variables.scss
+++ b/assets/css/scss/_variables.scss
@@ -1,6 +1,8 @@
 $font-h: 7.6rem;
 $font-p: 2rem;
 $primary-color: #ea5bdb;
+$text-color: #f2f2f2;
+$footer-color: #251f29;
 
 %wrapper {
     display: flex;
