--- a/assets/css/scss/_normalize.scss
+++ b/assets/css/scss/_normalize.scss
@@ -23,7 +23,7 @@ html {
 
 body {
     background: #141118;
-    color: #ffffff;
+    color: $text-color;
 }
 
 h1,
@@ -40,7 +40,7 @@ h6 {
 
 a {
     text-decoration: none;
-    color: #ffffff;
+    color: $text-color;
 }
 
 p {
