--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -343,11 +343,6 @@
             margin-top: 9rem;
         }
     }
-    .first,
-    .second,
-    .third {
-        background-size: contain !important;
-    }
     .third {
         background: url(../img/resently-top/img1.svg) no-repeat center;
     }
@@ -377,6 +372,11 @@
             opacity: 0.7;
         }
     }
+}
+.first,
+.second,
+.third {
+    background-size: contain !important;
 }
 
 .wrapper-sell {
@@ -464,7 +464,8 @@
     background: radial-gradient(207.73% 100% at 57.1% 100%, rgba(234, 91, 219, 0.5) 0%, rgba(20, 17, 24, 0) 100%);
     backdrop-filter: blur(4rem);
 }
-.last {
+.resently-top__item:last-child,
+.sell-NTFs__item:last-child {
     background: radial-gradient(100% 367.85% at 100% 50%, rgba(234, 91, 219, 0.5) 0%, rgba(20, 17, 24, 0) 100%);
 }
 
